Fixing another typo in plugin.yml

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 main: com.massivecraft.massivebooks.MassiveBooks
-name: mcess
+name: massivebooks
 version: 1.0.0_dev
 depend: [mcore]
 permissions:
