--- a/plugin.yml
+++ b/plugin.yml
@@ -15,6 +15,7 @@ permissions:
   massivebooks.clear.other: {description: clear a book by another author, default: false}
   massivebooks.title: {description: change title for a book, default: false}
   massivebooks.title.other: {description: change title for a book by another author, default: false}
+  massivebooks.title.color: {description: use colors in book titles, default: false}
   massivebooks.author: {description: change author for a book, default: false}
   massivebooks.author.other: {description: change author for a book by another author, default: false}
   massivebooks.copy: {description: copy a book, default: false}
@@ -41,6 +42,7 @@ permissions:
       massivebooks.clear.other: true
       massivebooks.title: true
       massivebooks.title.other: true
+      massivebooks.title.color: true
       massivebooks.author: true
       massivebooks.author.other: true
       massivebooks.copy: true
@@ -74,6 +76,7 @@ permissions:
       massivebooks.unlock.other: true
       massivebooks.lock.other: true
       massivebooks.title.other: true
+      massivebooks.title.color: true
       massivebooks.author: true
       massivebooks.author.other: true
       massivebooks.copy.other: true
