--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 main: com.massivecraft.massivebooks.MassiveBooks
 name: massivebooks
-version: 1.1.0
+version: 1.1.1_dev
 depend: [mcore]
 permissions:
 # -------------------------------------------- #
