--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,10 @@
 main: com.massivecraft.massivebooks.MassiveBooks
-name: massivebooks
+name: MassiveBooks
 version: 1.3.0
 website: http://massivecraft.com/massivebooks
 authors: [Cayorion]
 description: §eMassiveBooks provides book related features such as better displaynames, copying books, unlocking locked books for more editing, powertools, unique serverbooks, and ingame libraries using item frames. §aCayorion §efrom the minecraft server §aMassiveCraft §eis the lead programmer. Feel free to visit us at §bhttp://massivecraft.com
-depend: [mcore]
+depend: [MassiveCore]
 permissions:
 # -------------------------------------------- #
 # THE REAL NODES
