--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,9 @@
-main: com.massivecraft.massivebooks.MassiveBooks
-name: MassiveBooks
-version: 2.8.21
-website: https://www.massivecraft.com/massivebooks
+main: ${project.groupId}.${project.name}
+name: ${project.name}
+version: ${project.version}
+website: ${project.url}
+description: ${project.description}
 authors: [Cayorion]
-description: §eMassiveBooks provides book related features such as better displaynames, copying books, unlocking locked books for more editing, powertools, unique serverbooks, and ingame libraries using item frames. §aCayorion §efrom the minecraft server §aMassiveCraft §eis the lead programmer. Feel free to visit us at §bhttps://www.massivecraft.com
 depend: [MassiveCore]
 permissions:
 # -------------------------------------------- #
